Fix friend icon padding on collapsed group chat user list.

--- a/css/chat.css
+++ b/css/chat.css
@@ -2946,7 +2946,7 @@ body:not(.WindowFocus) .inviteAnotherFriendButton {
   margin: 4px !important;
 }
 
-.MemberListViewCompact .CompactFriendsList .friend {
+.MemberListViewCompact .CompactFriendsList .friend, .MemberListViewCompact .CompactFriendsList .friendGroup .friend {
   height: 24px !important;
   margin: 0 !important;
   padding: 0 !important;
